--- a/public/download.html
+++ b/public/download.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Studio - Download</title> <link rel="stylesheet" href="style.css">
+    <title>AI Studio - Download</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 
@@ -63,7 +64,7 @@
             margin-bottom: 20px;
             border-radius: 8px;
             background-color: #fafafa;
-            text-align: left; /* ⭐️ [수정] 텍스트가 왼쪽 정렬되도록 변경 */
+            text-align: left;
         }
         .qr-box {
             margin: 15px auto;
@@ -71,7 +72,7 @@
             border: 2px solid #111;
             display: inline-block;
             background-color: white;
-            text-align: center; /* QR 코드 중앙 정렬 */
+            text-align: center;
         }
     </style>
 </head>
@@ -136,7 +137,7 @@
         const urlParams = new URLSearchParams(window.location.search);
         const filename = urlParams.get('file');
         const mode = urlParams.get('mode');
-        const visionDescription = urlParams.get('desc'); // 한국어 분석 텍스트
+        const visionDescription = urlParams.get('desc');
 
         let generatedImageUrl = null;
 
@@ -145,7 +146,7 @@
             finalImagePreview.src = generatedImageUrl;
             finalImagePreview.style.display = 'block';
 
-            // ⭐️ 분석 피드백 표시 로직
+            // 분석 피드백 표시
             if ((mode === 'image' || mode === 'qr') && visionDescription) {
                 visionFeedbackSection.style.display = 'block';
                 visionDescriptionText.textContent = decodeURIComponent(visionDescription);
